---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ????
  Changes:
    - Removed rotate ghost since ghosts can't be removed.
    - Players with cheat_mode enabled can move more things including from different forces.
    - Players with cheat_mode enabled bypass any can_reach checks.
    - Blacklist interface now also writes to log when not silent.
  Bugfixes:
    - Fixed (hopefully) wire distance for circuit connectables.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-08-02
  Bugfixes:
    - Fix for building grid changes. Maybe Possibly.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-03-19
  Changes:
    - Remove Picker Atheneum Hard Dependency.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??????
  Features:
    - Update to Factorio 0.18.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ??????
  Features:
    - Changed all error messages to local flying text to be consistent with base game.
  Bugfixes:
    - Fixed some logic checks.
    - Fixed miners not correctly checking target spot for same ore type.
    - Fixed some missing error messages.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ??????
  Bugfixes:
    - Added sanity checks to remote API.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ??????
  Features:
    - Added remote interfaces for adding/removing/checking the blacklist 'add_blacklist_name', 'remove_blacklist_name', 'get_blacklist_names'.
  Bugfixes:
    - Fixed tile ghost bug by adding tile ghosts to the blacklist.