@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: ????
+  Features:
+    - Oblong pumps can now be rotated.
   Changes:
-    - Removed rotate ghost since ghosts can't be removed.
+    - Removed rotate ghost since ghosts can't be rotated.
     - Players with cheat_mode enabled can move more things including from different forces.
     - Players with cheat_mode enabled bypass any can_reach checks.
     - Blacklist interface now also writes to log when not silent.
